# gtk-boilerplate

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  README
src/: CMakeLists.txt  config.h.in  gtk-boilerplate.c  main_window.c  main_window.h
